--- a/app/src/main/res/layout/activity_detail_article.xml
+++ b/app/src/main/res/layout/activity_detail_article.xml
@@ -15,6 +15,7 @@
             android:id="@+id/imgDetailThumbnail"
             android:layout_width="match_parent"
             android:layout_height="240dp"
+            android:layout_marginTop="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
