28 - refactor: change intent data and auth rule

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -41,7 +41,7 @@
             android:layout_height="50dp"
             android:layout_marginTop="16dp"
             android:background="@drawable/custom_input"
-            android:drawableStart="@drawable/ic_baseline_email_24"
+            android:drawableStart="@drawable/ic_blue_assignment"
             android:drawablePadding="12dp"
             android:ems="10"
             android:inputType="text"
@@ -73,7 +73,7 @@
             android:layout_height="50dp"
             android:layout_marginTop="16dp"
             android:background="@drawable/custom_input"
-            android:drawableStart="@drawable/ic_baseline_email_24"
+            android:drawableStart="@drawable/ic_blue_email"
             android:drawablePadding="12dp"
             android:ems="10"
             android:inputType="text"
